# evals

./: .gitignore  LICENSE  README.md  pyproject.toml
evals/: __init__.py  base_adapters.py  common.py  formats.py  mmlu.py  protocols.py  types.py
evals/ifeval/: __init__.py  adapter.py
evals/mmlu_pro/: __init__.py  adapter.py  handler.py
